[package]
name = "ArmlabRadio"
version = "0.5.0"
edition = "2021"
license = "MIT"
description = "A library for interfacing with CC1200 Radios"
repository = "https://github.com/explosion33/ArmLabCC1200"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i2cdev = "0.3.2"
serialport = {version = "4.0.2", default-features = false}

[features]
i2clib = []